--- a/dotfiles/alacritty/alacritty.yml
+++ b/dotfiles/alacritty/alacritty.yml
@@ -31,7 +31,8 @@ scrolling:
 
 # FONT
 font:
-  size: 12
+  # size: 12 # for single laptop monitor
+  size: 17 # for multi-monitor setup (27 inches)
   normal:
     family: Jetbrains Mono
   bold:
