--- a/dotfiles/99-libinput-custom-config.conf
+++ b/dotfiles/99-libinput-custom-config.conf
@@ -4,3 +4,10 @@ Section "InputClass"
 	MatchProduct "Logitech G305"
 	Option "AccelSpeed" "-0.6"
 EndSection
+
+Section "InputClass"
+	Identifier "Persistently set G502 sensitivity"
+	MatchDriver "libinput"
+	MatchProduct "Logitech Gaming Mouse G502"
+	Option "AccelSpeed" "-0.6"
+EndSection
