--- a/dotfiles/starship.toml
+++ b/dotfiles/starship.toml
@@ -152,6 +152,9 @@ error_symbol  = "[➜](bold red)"
 [directory]
 truncation_length = 10
 
+[jobs]
+format = "[$symbol $number\n]($style)"
+
 # Disable the package module, hiding it from the prompt completely
 [package]
 disabled = true
@@ -163,4 +166,7 @@ disabled = true
 disabled = true
 
 [perl]
+disabled = true
+
+[nodejs]
 disabled = true
