--- a/dotfiles/alacritty/alacritty.yml
+++ b/dotfiles/alacritty/alacritty.yml
@@ -75,6 +75,7 @@ key_bindings:
   - {key: Equals, mods: Control, action: IncreaseFontSize}
   - {key: Plus, mods: Control, action: IncreaseFontSize}
   - {key: Minus, mods: Control, action: DecreaseFontSize}
+  - {key: Space, mods: Control, action: ToggleViMode}
 
 # COLOURS / STYLING
 colors:
@@ -107,9 +108,5 @@ colors:
     cyan: '#b4f9f8'
     white: '#5f8787'
   indexed_colors:
-    - {index: 16, color: '#dfaf8f'}
-    - {index: 17, color: '#000000'}
-    - {index: 18, color: '#404040'}
-    - {index: 19, color: '#606060'}
-    - {index: 20, color: '#808080'}
-    - {index: 21, color: '#c0c0c0'}
+    - {index: 16, color: '0xF8BD96'}
+    - {index: 17, color: '0xF5E0DC'}
