--- a/dotfiles/starship.toml
+++ b/dotfiles/starship.toml
@@ -6,6 +6,9 @@ add_newline = true
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol  = "[➜](bold red)"
 
+[[battery.display]]
+threshold = 40
+
 [directory]
 truncation_length = 10
 
