--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,4 +1,8 @@
 backend = "glx";
-opacity-rule = ["100:class_g = 'Alacritty'"]
+opacity-rule = [ "100:class_g = 'Alacritty'"]
+# opacity-rule = [
+	# "100:class_g = 'Alacritty'",
+	# "100:class_g = 'Emacs'"
+# ]
 fading = true;
 no-fading-openclose = true;
