--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -1,8 +1,4 @@
 backend = "glx";
-opacity-rule = [ "100:class_g = 'Alacritty'"]
-# opacity-rule = [
-	# "100:class_g = 'Alacritty'",
-	# "100:class_g = 'Emacs'"
-# ]
+opacity-rule = ["100:class_g = 'Alacritty'"];
 fading = true;
 no-fading-openclose = true;
