--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -79,35 +79,39 @@ key_bindings:
 # COLOURS / STYLING
 # CURSOR COLOURS ACT WEIRD AND DON'T MATCH THE DISPLAYED COLOUR
 colors:
-  # COLORSCHEME: omni.yml
+  # COLORSCHEME: gruvbox_dark.yaml
+  # Default colors
   primary:
-    background: '#191622'
-    foreground: '#e1e1e6'
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
 
+  # Normal colors
   cursor:
     text: '#191622'
     cursor: '#f8f8f2'
 
   normal:
-    black: '#000000'
-    red: '#ff5555'
-    green: '#50fa7b'
-    yellow: '#effa78'
-    blue: '#bd93f9'
-    magenta: '#ff79c6'
-    cyan: '#8d79ba'
-    white: '#bfbfbf'
+    black: '#282828'
+    red: '#cc241d'
+    green: '#98971a'
+    yellow: '#d79921'
+    blue: '#458588'
+    magenta: '#b16286'
+    cyan: '#689d6a'
+    white: '#a89984'
 
+  # Bright colors
   bright:
-    black: '#4d4d4d'
-    red: '#ff6e67'
-    green: '#5af78e'
-    yellow: '#eaf08d'
-    blue: '#caa9fa'
-    magenta: '#ff92d0'
-    cyan: '#aa91e3'
-    white: '#e6e6e6'
-
+    black: '#928374'
+    red: '#fb4934'
+    green: '#b8bb26'
+    yellow: '#fabd2f'
+    blue: '#83a598'
+    magenta: '#d3869b'
+    cyan: '#8ec07c'
+    white: '#ebdbb2'
   indexed_colors:
     - {index: 16, color: '0xF8BD96'}
     - {index: 17, color: '0xF5E0DC'}
