--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -79,39 +79,39 @@ key_bindings:
 # COLOURS / STYLING
 # CURSOR COLOURS ACT WEIRD AND DON'T MATCH THE DISPLAYED COLOUR
 colors:
-  # COLORSCHEME: gruvbox_dark.yaml
+  # COLORSCHEME: tokyo-night-storm.yaml
   # Default colors
   primary:
     # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
+    background: '#24283b'
+    foreground: '#a9b1d6'
 
   # Normal colors
   cursor:
-    text: '#191622'
-    cursor: '#f8f8f2'
+    text: '#a9b1d6'
+    cursor: '#a9b1d6'
 
+  # Normal colors
   normal:
-    black: '#282828'
-    red: '#cc241d'
-    green: '#98971a'
-    yellow: '#d79921'
-    blue: '#458588'
-    magenta: '#b16286'
-    cyan: '#689d6a'
-    white: '#a89984'
+    black: '#32344a'
+    red: '#f7768e'
+    green: '#9ece6a'
+    yellow: '#e0af68'
+    blue: '#7aa2f7'
+    magenta: '#ad8ee6'
+    cyan: '#449dab'
+    white: '#9699a8'
 
   # Bright colors
   bright:
-    black: '#928374'
-    red: '#fb4934'
-    green: '#b8bb26'
-    yellow: '#fabd2f'
-    blue: '#83a598'
-    magenta: '#d3869b'
-    cyan: '#8ec07c'
-    white: '#ebdbb2'
+    black: '#444b6a'
+    red: '#ff7a93'
+    green: '#b9f27c'
+    yellow: '#ff9e64'
+    blue: '#7da6ff'
+    magenta: '#bb9af7'
+    cyan: '#0db9d7'
+    white: '#acb0d0'
   indexed_colors:
     - {index: 16, color: '0xF8BD96'}
     - {index: 17, color: '0xF5E0DC'}
