--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -32,8 +32,8 @@ scrolling:
 
 # FONT
 font:
-  size: 12 # for single laptop monitor
-  # size: 14 # for multi-monitor setup (27 inches)
+  # size: 12 # for single laptop monitor
+  size: 14 # for multi-monitor setup (27 inches)
   normal:
     family: Jetbrains Mono
   bold:
