--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -2,3 +2,4 @@
 gtk-application-prefer-dark-theme = true
 gtk-font-name = Jetbrains Mono 11
 gtk-icon-theme-name = Candy Icons
+gtk-cursor-theme-name = Sweet-cursors
