--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -12,7 +12,7 @@ separator_block_width=15
 
 # [windowname]
 # command=while true; do xdotool getactivewindow getwindowname; done
-# color=#eeb42f
+# color=#EEB42F
 # interval=persist
 
 [separator]
@@ -22,13 +22,14 @@ command=./vpnf.sh
 interval=10
 signal=11
 markup=pango
+color=#91E78B
 
 [separator]
 
 [wireless]
 command=echo "W:" $(nmcli -t -f active,ssid,signal dev wifi | awk -F':' '/yes/{print "("$3"% at", $2")"}')
 interval=10
-color=#eeb42f
+color=#EEB42F
 
 [separator]
 
@@ -42,24 +43,34 @@ color=#91E78B
 [mic]
 command=echo "mic: $($SCRIPTS/mic-state)"
 interval=once
-color=#eeb42f
 signal=10
+color=#EEB42F
 
 [separator]
 
 [battery]
 command=./battery.sh
-color=#91E78B
 interval=10
+color=#91E78B
 
 [separator]
 
 [memory]
 command=echo "$(free -m | awk '/Mem:/{printf "%d/%dM (%.2f%)", $3,$2,$3*100/$2}')"
 interval=1
-color=#eeb42f
+color=#EEB42F
 
 [separator]
+
+[root_disk]
+command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
+interval=3600
+color=#91E78B
+
+[hdd_disk]
+command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
+interval=3600
+color=#EEB42F
 
 # Query my default IP address only on startup
 [ip]
@@ -72,6 +83,6 @@ color=#91E78B
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
 interval=1
-color=#eeb42f
+color=#EEB42F
 
 [separator]
