--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -55,24 +55,9 @@ bindsym $mod+Shift+l move right
 # enter fullscreen mode for the focused container
 bindsym $mod+Shift+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+Shift+w layout stacking
-bindsym $mod+Shift+t layout tabbed
-# bindsym $mod+Shift+e layout toggle split
-
 # toggle tiling / floating
 bindsym $mod+Shift+n floating toggle
 bindsym $mod+n focus mode_toggle
-
-# focus the parent container
-# bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
-
-bindsym $mod+grave workspace back_and_forth
-bindsym $mod+Ctrl+comma workspace prev
-bindsym $mod+Ctrl+period workspace next
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -100,11 +85,21 @@ bindsym $mod+Ctrl+9 move container to workspace 9
 bindsym $mod+Ctrl+0 move container to workspace 10
 bindsym $mod+Ctrl+minus move container to workspace 11
 
+# Workspace manipulation
+bindsym $mod+grave workspace back_and_forth
+bindsym $mod+comma focus output left
+bindsym $mod+period focus output right
+bindsym $mod+Ctrl+comma move workspace to output left
+bindsym $mod+Ctrl+period move workspace to output left
+bindsym $mod+Shift+comma workspace prev
+bindsym $mod+Shift+period workspace next
+
+# Layouts
 bindsym $mod+Escape layout toggle tabbed splitv splith
 bindsym $mod+Shift+Escape layout toggle splith splitv tabbed
 
 # Launcher
-bindsym $mod+Return exec alacritty # terminal
+bindsym $mod+Return exec alacritty
 bindsym $mod+m exec --no-startup-id "rofi -m -4 -modi drun -show drun" 
 bindsym $mod+space exec --no-startup-id "rofi -m -4 -show window"
 bindsym $mod+Shift+s exec "flameshot gui" 
@@ -146,8 +141,8 @@ bindsym $mod+Ctrl+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut
 
 bindsym $mod+Ctrl+Shift+s exec "systemctl suspend"
 bindsym $mod+Ctrl+Shift+h exec "systemctl hibernate"
-bindsym $mod+Ctrl+Shift+r exec "reboot"
-bindsym $mod+Ctrl+Shift+u exec "shutdown now"
+bindsym $mod+Ctrl+Shift+r exec "$HOME/.local/bin/em p && reboot"
+bindsym $mod+Ctrl+Shift+u exec "$HOME/.local/bin/em p && shutdown now"
 
 # px for floating | ppt for tiled
 bindsym $mod+Ctrl+h resize shrink width 100 px or 10 ppt
@@ -160,7 +155,7 @@ assign [class="virt-manager"] number 5
 assign [class="qbittorrent"] number 6
 assign [class="Steam" title="Steam"] number 7
 assign [class="discord"] number 7
-assign [class="Google-chrome"] number 8
+# assign [class="Google-chrome"] number 8
 assign [class="Spotify"] number 9
 assign [title="TIS-100"] number 11
 assign [class="^steam_app.*"] number 11
@@ -168,7 +163,9 @@ assign [class="^steam_app.*"] number 11
 bindsym $mod+Shift+equal move scratchpad
 bindsym $mod+equal scratchpad show
 
+no_focus [window_role="pop_up"]
 for_window [class="Galculator"] floating enable
+for_window [class="genp"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -202,10 +199,3 @@ bar {
         # status_command i3status --config ~/.config/i3/i3status.conf
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
-
-# bindsym Mod1+F1 exec "~/bin/hhkb-i3"
-# bindsym $mod+Shift+h exec "~/.screenlayout/home-setup.sh"
-# bindsym $mod+Shift+p exec "~/.screenlayout/portable-setup.sh"
-# bindsym $mod+Shift+w exec "~/bin/map-wacom"
-# bindsym $mod+b exec "boomer"
-# bindsym --release $mod+Shift+l exec "slock"
