--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -49,7 +49,7 @@ color=#EEB42F
 [separator]
 
 [battery]
-command=./battery.sh
+command=python battery.py
 interval=10
 color=#91E78B
 
@@ -57,7 +57,7 @@ color=#91E78B
 
 [memory]
 command=echo "$(free -m | awk '/Mem:/{printf "%d/%dM (%.2f%)", $3,$2,$3*100/$2}')"
-interval=1
+interval=5
 color=#EEB42F
 
 [separator]
@@ -82,7 +82,7 @@ color=#91E78B
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=1
+interval=5
 color=#EEB42F
 
 [separator]
