[i3] bandwidth [emacs] dired + org/agenda

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -15,12 +15,25 @@ separator_block_width=15
 # color=#EEB42F
 # interval=persist
 
+[bandwidth2]
+command=./bandwidth/bandwidth2
+interval=persist
+markup=pango
+# LABEL=
+WARN_RX=307200
+WARN_TX=30720
+CRIT_RX=512000
+CRIT_TX=51200
+REFRESH_TIME=3
+color=#EEB42F
+
+[separator]
+
 [vpn]
 command=./vpnf.sh
 interval=10
 signal=11
 markup=pango
-color=#EEB42F
 
 [separator]
 
@@ -32,7 +45,8 @@ color=#EEB42F
 [separator]
 
 [mic]
-command=echo "mic: $($SCRIPTS/mic-state)"
+# command=echo "mic: $($SCRIPTS/mic-state)"
+command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
 interval=once
 signal=10
 color=#91E78B
