--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -16,6 +16,7 @@ set $mod Mod1
 floating_modifier $mod
 
 focus_follows_mouse no
+mouse_warping none
 hide_edge_borders smart_no_gaps
 default_border pixel 1
 default_floating_border normal
@@ -56,8 +57,8 @@ bindsym $mod+Shift+l move right
 bindsym $mod+Shift+f fullscreen toggle
 
 # toggle tiling / floating
-bindsym $mod+Shift+n floating toggle
-bindsym $mod+n focus mode_toggle
+bindsym $mod+Ctrl+f floating toggle
+bindsym $mod+f focus mode_toggle
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -112,18 +113,18 @@ bindsym $mod+e exec "$HOME/.local/bin/em n"
 bindsym $mod+Shift+e exec "emacs"
 
 # Volume
-bindsym Shift+F7 exec "$HOME/.local/bin/change-volume -10%"
+bindsym Shift+XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -10%"
 bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5%"
 bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5%"
-bindsym Shift+F8 exec "$HOME/.local/bin/change-volume +10%"
+bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10%"
 bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0"
-
-bindsym Shift+F6 exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
+# bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
+bindsym Shift+XF86AudioMute exec "pkill -SIGRTMIN+10 i3blocks"
 bindsym $mod+v exec "$HOME/.local/bin/vpn t && pkill -SIGRTMIN+11 i3blocks"
 
 # Player
 bindsym XF86AudioPlay exec "playerctl play-pause && $HOME/.local/bin/media-notif"
-bindsym Shift+F10 exec "playerctl -p spotify play-pause && $HOME/.local/bin/media-notif spotify"
+bindsym Shift+XF86AudioPlay exec "playerctl -p spotify play-pause && $HOME/.local/bin/media-notif spotify"
 bindsym XF86AudioNext exec "playerctl next"
 bindsym XF86AudioPrev exec "playerctl previous"
 
@@ -152,12 +153,23 @@ bindsym $mod+Ctrl+l resize grow width 100 px or 10 ppt
 
 # Assign
 assign [class="virt-manager"] number 5
-assign [class="qbittorrent"] number 6
+assign [class="qBittorrent"] number 6
+assign [class="pentablet"] number 6
 assign [class="Steam" title="Steam"] number 7
 assign [class="discord"] number 7
 # assign [class="Google-chrome"] number 8
 assign [class="Spotify"] number 9
 assign [title="TIS-100"] number 11
+assign [title="factorio"] number 11
+assign [title="PapersPlease"] number 11
+assign [class="osu!.exe"] number 11
+assign [title="minecraft launcher"] number 11
+assign [title="TIS-100"] number 11
+assign [title="Celeste"] number 11
+assign [title="Dead Cells"] number 11
+assign [title="deadcells"] number 11
+assign [title="Slay the SPire"] number 11
+assign [title="EXAPUNKS"] number 11
 assign [class="^steam_app.*"] number 11
 
 bindsym $mod+Shift+equal move scratchpad
@@ -166,6 +178,7 @@ bindsym $mod+equal scratchpad show
 no_focus [window_role="pop_up"]
 for_window [class="Galculator"] floating enable
 for_window [class="genp"] floating enable
+for_window [class="pentablet"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
