--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -38,7 +38,7 @@ markup=pango
 [separator]
 
 [pacman]
-command=echo " $(checkupdates | wc -l)"
+command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
 color=#EEB42F
 
@@ -46,7 +46,8 @@ color=#EEB42F
 
 [mic]
 # command=echo "mic: $($SCRIPTS/mic-state)"
-command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
+# command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
+command=echo "mic: $($HOME/.local/bin/mic-toggle)"
 interval=once
 signal=10
 color=#91E78B
@@ -70,7 +71,6 @@ command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#EEB42F
 
-# Query my default IP address only on startup
 [ip]
 command=hostname -i | awk '{ print "IP:" $1 }'
 interval=once
@@ -80,5 +80,5 @@ color=#91E78B
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=5
 color=#EEB42F
+interval=5
