--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -15,6 +15,18 @@ separator_block_width=15
 # color=#EEB42F
 # interval=persist
 
+[bandwidth2]
+command=./bandwidth/bandwidth2
+interval=persist
+markup=pango
+# LABEL=
+WARN_RX=307200
+WARN_TX=30720
+CRIT_RX=512000
+CRIT_TX=51200
+REFRESH_TIME=3
+color=#EEB42F
+
 [separator]
 
 [vpn]
@@ -22,26 +34,20 @@ command=./vpnf.sh
 interval=10
 signal=11
 markup=pango
-color=#91E78B
-
-[separator]
-
-[wireless]
-command=echo "W:" $(nmcli -t -f active,ssid,signal dev wifi | awk -F':' '/yes/{print "("$3"% at", $2")"}')
-interval=10
-color=#EEB42F
 
 [separator]
 
 [pacman]
-command=echo " $(checkupdates | wc -l)"
+command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
 color=#91E78B
 
 [separator]
 
 [mic]
-command=echo "mic: $($SCRIPTS/mic-state)"
+# command=echo "mic: $($SCRIPTS/mic-state)"
+# command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
+command=echo "mic: $($HOME/.local/bin/mic-toggle)"
 interval=once
 signal=10
 color=#EEB42F
@@ -72,7 +78,6 @@ command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#EEB42F
 
-# Query my default IP address only on startup
 [ip]
 command=hostname -i | awk '{ print "IP:" $1 }'
 interval=once
@@ -82,7 +87,5 @@ color=#91E78B
 
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
-interval=5
 color=#EEB42F
-
-[separator]
+interval=5
