[pacman] hook + [fish] + [i3]

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -118,9 +118,7 @@ bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5%"
 bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5%"
 bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10%"
 bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0"
-# bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
-bindsym Shift+XF86AudioMute exec "pkill -SIGRTMIN+10 i3blocks"
-# bindsym $mod+v exec "$HOME/.local/bin/vpn t && pkill -SIGRTMIN+11 i3blocks"
+bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
 bindsym $mod+v exec "$HOME/.local/bin/vpn toggle && pkill -SIGRTMIN+11 i3blocks"
 
 # Player
@@ -160,20 +158,11 @@ assign [class="Steam" title="Steam"] number 7
 assign [class="discord"] number 7
 # assign [class="Google-chrome"] number 8
 assign [class="Spotify"] number 9
-assign [class="TIS-100"] number 11
-assign [class="factorio"] number 11
-assign [class="PapersPlease"] number 11
+assign [class="steam_app.*"] number 11 
 assign [title="osu!"] number 11
-assign [class="minecraft launcher"] number 11
-assign [class="TIS-100"] number 11
-assign [class="Celeste"] number 11
-assign [class="Dead Cells"] number 11
-assign [class="deadcells"] number 11
-assign [class="Slay the SPire"] number 11
 assign [class="EXAPUNKS"] number 11
 assign [title="Risk of Rain 2"] number 11
 assign [title="Furi"] number 11
-assign [class=".*steam_app.*" title=".*steam_app.*"] number 11 
 assign [class="WizardOfLegend.x86_64"] number 11
 
 
@@ -184,6 +173,7 @@ no_focus [window_role="pop_up"]
 for_window [class="Galculator"] floating enable
 for_window [class="genp"] floating enable
 for_window [class="pentablet"] floating enable
+for_window [class="Pavucontrol"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -215,11 +205,12 @@ mode "resize" {
 # finds out, if available)
 bar {
         # status_command i3status --config ~/.config/i3/i3status.conf
-	output primary
+	# output primary
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
 
-bar {
-	output nonprimary
-        status_command i3blocks -c ~/.config/i3/i3blocks-simple.conf
-}
+# bar {
+# 	output nonprimary
+#         status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#         # status_command i3blocks -c ~/.config/i3/i3blocks-simple.conf
+# }
