--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -45,9 +45,9 @@ color=#EEB42F
 [separator]
 
 [mic]
-# command=echo "mic: $($SCRIPTS/mic-state)"
+command=echo "mic: $($SCRIPTS/mic-state)"
 # command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
-command=echo "mic: $($HOME/.local/bin/mic-toggle)"
+# command=echo "mic: $($HOME/.local/bin/mic-toggle)"
 interval=once
 signal=10
 color=#91E78B
@@ -78,7 +78,12 @@ color=#91E78B
 
 [separator]
 
+[sit_stand_timer]
+command=echo $($SCRIPTS/sit-stand left seconds)
+interval=10
+color=#EEB42F
+
 [time]
 command=date '+%Y-%m-%d %H:%M:%S'
-color=#EEB42F
+color=#91E78B
 interval=5
