--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -151,7 +151,7 @@ bindsym $mod+Ctrl+k resize shrink height 100 px or 10 ppt
 bindsym $mod+Ctrl+l resize grow width 100 px or 10 ppt
 
 # Assign
-assign [class="virt-manager"] number 5
+assign [class="Virt-manager"] number 5
 assign [class="qBittorrent"] number 6
 assign [class="pentablet"] number 6
 assign [class="Steam" title="Steam"] number 7
@@ -174,6 +174,7 @@ for_window [class="Galculator"] floating enable
 for_window [class="genp"] floating enable
 for_window [class="pentablet"] floating enable
 for_window [class="Pavucontrol"] floating enable
+for_window [title=".*QEMU/KVM"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
