--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -48,10 +48,10 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Ctrl+h move left
+bindsym $mod+Ctrl+j move down
+bindsym $mod+Ctrl+k move up
+bindsym $mod+Ctrl+l move right
 
 # enter fullscreen mode for the focused container
 bindsym $mod+Shift+f fullscreen toggle
@@ -104,7 +104,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+m exec --no-startup-id "rofi -m -4 -modi drun -show drun" 
 bindsym $mod+space exec --no-startup-id "rofi -m -4 -show window"
 bindsym $mod+Shift+s exec "flameshot gui" 
-bindsym $mod+b exec firefox
+bindsym $mod+b exec "firefox"
 bindsym $mod+c exec "google-chrome-stable"
 bindsym $mod+a exec "$HOME/.local/bin/run"
 
@@ -113,18 +113,17 @@ bindsym $mod+e exec "$HOME/.local/bin/em n"
 bindsym $mod+Shift+e exec "emacs"
 
 # Volume
-bindsym Shift+F7 exec "$HOME/.local/bin/change-volume -10%"
+bindsym Shift+XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -10%"
 bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5%"
 bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5%"
-bindsym Shift+F8 exec "$HOME/.local/bin/change-volume +10%"
+bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10%"
 bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0"
-
-bindsym Shift+F6 exec "pkill -SIGRTMIN+10 i3blocks"
-bindsym $mod+v exec "$HOME/.local/bin/vpn t && pkill -SIGRTMIN+11 i3blocks"
+bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
+bindsym $mod+v exec "$HOME/.local/bin/vpn toggle && pkill -SIGRTMIN+11 i3blocks"
 
 # Player
 bindsym XF86AudioPlay exec "playerctl play-pause && $HOME/.local/bin/media-notif"
-bindsym Shift+F10 exec "playerctl -p spotify play-pause && $HOME/.local/bin/media-notif spotify"
+bindsym Shift+XF86AudioPlay exec "playerctl -p spotify play-pause && $HOME/.local/bin/media-notif spotify"
 bindsym XF86AudioNext exec "playerctl next"
 bindsym XF86AudioPrev exec "playerctl previous"
 
@@ -142,37 +141,28 @@ bindsym $mod+Ctrl+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut
 
 bindsym $mod+Ctrl+Shift+s exec "systemctl suspend"
 bindsym $mod+Ctrl+Shift+h exec "systemctl hibernate"
-bindsym $mod+Ctrl+Shift+r exec "$HOME/.local/bin/em p state && reboot"
-bindsym $mod+Ctrl+Shift+u exec "$HOME/.local/bin/em p state && shutdown now"
+bindsym $mod+Ctrl+Shift+r exec "$HOME/.local/bin/em p && reboot"
+bindsym $mod+Ctrl+Shift+u exec "$HOME/.local/bin/em p && shutdown now"
 
 # px for floating | ppt for tiled
-bindsym $mod+Ctrl+h resize shrink width 100 px or 10 ppt
-bindsym $mod+Ctrl+j resize grow height 100 px or 10 ppt
-bindsym $mod+Ctrl+k resize shrink height 100 px or 10 ppt
-bindsym $mod+Ctrl+l resize grow width 100 px or 10 ppt
+bindsym $mod+Shift+h resize shrink width 100 px or 10 ppt
+bindsym $mod+Shift+j resize grow height 100 px or 10 ppt
+bindsym $mod+Shift+k resize shrink height 100 px or 10 ppt
+bindsym $mod+Shift+l resize grow width 100 px or 10 ppt
 
 # Assign
-assign [class="virt-manager"] number 5
+assign [class="Virt-manager"] number 5
 assign [class="qBittorrent"] number 6
 assign [class="pentablet"] number 6
-assign [class="Steam" title="Steam"] number 7
+assign [class="steam"] number 7
 assign [class="discord"] number 7
 # assign [class="Google-chrome"] number 8
 assign [class="Spotify"] number 9
-assign [class="TIS-100"] number 11
-assign [class="factorio"] number 11
-assign [class="PapersPlease"] number 11
+assign [class="steam_app.*"] number 11 
 assign [title="osu!"] number 11
-assign [class="minecraft launcher"] number 11
-assign [class="TIS-100"] number 11
-assign [class="Celeste"] number 11
-assign [class="Dead Cells"] number 11
-assign [class="deadcells"] number 11
-assign [class="Slay the SPire"] number 11
 assign [class="EXAPUNKS"] number 11
 assign [title="Risk of Rain 2"] number 11
 assign [title="Furi"] number 11
-assign [class=".*steam_app.*" title=".*steam_app.*"] number 11 
 assign [class="WizardOfLegend.x86_64"] number 11
 
 
@@ -180,9 +170,15 @@ bindsym $mod+Ctrl+equal move scratchpad
 bindsym $mod+equal scratchpad show
 
 no_focus [window_role="pop_up"]
+
+for_window [class="firefox"] layout tabbed
+for_window [class="google-chrome"] layout tabbed
+
 for_window [class="Galculator"] floating enable
 for_window [class="genp"] floating enable
 for_window [class="pentablet"] floating enable
+for_window [class="Pavucontrol"] floating enable
+for_window [title=".*QEMU/KVM"] floating enable
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -214,11 +210,14 @@ mode "resize" {
 # finds out, if available)
 bar {
         # status_command i3status --config ~/.config/i3/i3status.conf
-	output primary
+	# output primary
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
 
-bar {
-	output nonprimary
-        status_command i3blocks -c ~/.config/i3/i3blocks-simple.conf
-}
+# exec --no-startup-id "$HOME/.local/bin/smg r"
+
+# bar {
+# 	output nonprimary
+#         status_command i3blocks -c ~/.config/i3/i3blocks.conf
+#         # status_command i3blocks -c ~/.config/i3/i3blocks-simple.conf
+# }
