[i3|kchain|env|mercury-browser|emacs]

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -2,11 +2,11 @@
 # Switch between the following configurations to customise separator			 #
 # [separator] blocks serve this purpose, but do not interfere with default functionality #
 ##########################################################################################
-# full_text="<>"
+# full_text="><"
 # align=center
 # color=#F79494
 # separator=false
-# separator_block_width=7
+# separator_block_width=2
 separator=true
 separator_block_width=15
 
@@ -66,24 +66,43 @@ command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#91E78B
 
+[separator]
+
 [hdd_disk]
 command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#EEB42F
 
-[ip]
-command=hostname -i | awk '{ print "IP:" $1 }'
+# [ip]
+# command=hostname -i | awk '{ print "IP:" $1 }'
+# interval=once
+# color=#91E78B
+
+[separator]
+
+[active-sink]
+command=$SCRIPTS/toggle-sink
 interval=once
+signal=12
 color=#91E78B
 
 [separator]
 
-[sit_stand_timer]
-command=echo $($SCRIPTS/sit-stand left seconds)
-interval=10
-color=#EEB42F
+# [volume]
+# command=./volume.sh $button
+# interval=once
+# signal=13
+# color=#EEB42F
 
-[time]
+# [sit_stand_timer]
+# command=echo $($SCRIPTS/sit-stand left seconds)
+# interval=10
+# color=#EEB42F
+
+[separator]
+
+[datetime]
 command=date '+%Y-%m-%d %H:%M:%S'
-color=#91E78B
+# color=#91E78B
+color=#EEB42F
 interval=5
