--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -104,7 +104,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+m exec --no-startup-id "rofi -m -4 -modi drun -show drun" 
 bindsym $mod+space exec --no-startup-id "rofi -m -4 -show window"
 bindsym $mod+Shift+s exec "flameshot gui" 
-bindsym $mod+b exec "firefox"
+bindsym $mod+b exec "mercury-browser"
 bindsym $mod+c exec "google-chrome-stable"
 bindsym $mod+a exec "$HOME/.local/bin/run"
 
@@ -113,11 +113,11 @@ bindsym $mod+e exec "$HOME/.local/bin/em n"
 bindsym $mod+Shift+e exec "emacs"
 
 # Volume
-bindsym Shift+XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -10%"
-bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5%"
-bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5%"
-bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10%"
-bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0"
+bindsym Shift+XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -10% && pkill -SIGRTMIN+13 i3blocks"
+bindsym XF86AudioLowerVolume exec  "$HOME/.local/bin/change-volume -5% && pkill -SIGRTMIN+13 i3blocks"
+bindsym XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +5% && pkill -SIGRTMIN+13 i3blocks"
+bindsym Shift+XF86AudioRaiseVolume exec "$HOME/.local/bin/change-volume +10% && pkill -SIGRTMIN+13 i3blocks"
+bindsym XF86AudioMute exec "$HOME/.local/bin/change-volume 0 && pkill -SIGRTMIN+13 i3blocks"
 bindsym Shift+XF86AudioMute exec "$HOME/.local/bin/mic-toggle && pkill -SIGRTMIN+10 i3blocks"
 bindsym $mod+v exec "$HOME/.local/bin/vpn toggle && pkill -SIGRTMIN+11 i3blocks"
 
@@ -126,6 +126,8 @@ bindsym XF86AudioPlay exec "playerctl play-pause && $HOME/.local/bin/media-notif
 bindsym Shift+XF86AudioPlay exec "playerctl -p spotify play-pause && $HOME/.local/bin/media-notif spotify"
 bindsym XF86AudioNext exec "playerctl next"
 bindsym XF86AudioPrev exec "playerctl previous"
+bindsym Shift+XF86AudioNext exec "pkill -SIGRTMIN+12 i3blocks"
+bindsym Shift+XF86AudioPrev exec "pkill -SIGRTMIN+12 i3blocks"
 
 # Brightness
 bindsym XF86MonBrightnessUp exec "brightnessctl set +5%"
@@ -159,11 +161,13 @@ assign [class="discord"] number 7
 # assign [class="Google-chrome"] number 8
 assign [class="Spotify"] number 9
 assign [class="steam_app.*"] number 11 
+assign [class="Risk of Rain 2"] number 11
 assign [title="osu!"] number 11
 assign [class="EXAPUNKS"] number 11
-assign [title="Risk of Rain 2"] number 11
 assign [title="Furi"] number 11
 assign [class="WizardOfLegend.x86_64"] number 11
+assign [class="Minecraft.*"] number 11
+assign [class="Stardew Valley"] number 11
 
 
 bindsym $mod+Ctrl+equal move scratchpad
@@ -171,8 +175,8 @@ bindsym $mod+equal scratchpad show
 
 no_focus [window_role="pop_up"]
 
-for_window [class="firefox"] layout tabbed
-for_window [class="google-chrome"] layout tabbed
+# for_window [class="google-chrome"] layout tabbed
+for_window [window_role="browser"] layout tabbed
 
 for_window [class="Galculator"] floating enable
 for_window [class="genp"] floating enable
