--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -2,11 +2,11 @@
 # Switch between the following configurations to customise separator			 #
 # [separator] blocks serve this purpose, but do not interfere with default functionality #
 ##########################################################################################
-# full_text="<>"
+# full_text="><"
 # align=center
 # color=#F79494
 # separator=false
-# separator_block_width=7
+# separator_block_width=2
 separator=true
 separator_block_width=15
 
@@ -40,23 +40,16 @@ markup=pango
 [pacman]
 command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
-color=#91E78B
-
-[separator]
-
-[mic]
-# command=echo "mic: $($SCRIPTS/mic-state)"
-# command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
-command=echo "mic: $($HOME/.local/bin/mic-toggle)"
-interval=once
-signal=10
 color=#EEB42F
 
 [separator]
 
-[battery]
-command=python battery.py
-interval=10
+[mic]
+command=echo "mic: $($SCRIPTS/mic-state)"
+# command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
+# command=echo "mic: $($HOME/.local/bin/mic-toggle)"
+interval=once
+signal=10
 color=#91E78B
 
 [separator]
@@ -73,19 +66,43 @@ command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#91E78B
 
+[separator]
+
 [hdd_disk]
 command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
 color=#EEB42F
 
-[ip]
-command=hostname -i | awk '{ print "IP:" $1 }'
+# [ip]
+# command=hostname -i | awk '{ print "IP:" $1 }'
+# interval=once
+# color=#91E78B
+
+[separator]
+
+[active-sink]
+command=$SCRIPTS/toggle-sink
 interval=once
+signal=12
 color=#91E78B
 
 [separator]
 
-[time]
+# [volume]
+# command=./volume.sh $button
+# interval=once
+# signal=13
+# color=#EEB42F
+
+# [sit_stand_timer]
+# command=echo $($SCRIPTS/sit-stand left seconds)
+# interval=10
+# color=#EEB42F
+
+[separator]
+
+[datetime]
 command=date '+%Y-%m-%d %H:%M:%S'
+# color=#91E78B
 color=#EEB42F
 interval=5
