--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -44,47 +44,46 @@ color=#EEB42F
 
 [separator]
 
+[battery]
+command=python battery.py
+interval=10
+color=#91E78B
+
+[separator]
+
 [mic]
 command=echo "mic: $($SCRIPTS/mic-state)"
 # command="$HOME/.local/bin/mic-toggle" && echo "mic: $($SCRIPTS/mic-state)"
 # command=echo "mic: $($HOME/.local/bin/mic-toggle)"
 interval=once
 signal=10
-color=#91E78B
+color=#EEB42F
 
 [separator]
 
 [memory]
 command=echo "$(free -m | awk '/Mem:/{printf "%d/%dM (%.2f%)", $3,$2,$3*100/$2}')"
 interval=5
-color=#EEB42F
+color=#91E78B
 
 [separator]
 
 [root_disk]
 command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#91E78B
+color=#EEB42F
 
 [separator]
 
 [hdd_disk]
 command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#EEB42F
+color=#91E78B
 
 # [ip]
 # command=hostname -i | awk '{ print "IP:" $1 }'
 # interval=once
 # color=#91E78B
-
-[separator]
-
-[active-sink]
-command=$SCRIPTS/toggle-sink
-interval=once
-signal=12
-color=#91E78B
 
 [separator]
 
