--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -12,8 +12,12 @@ separator_block_width=15
 
 # [windowname]
 # command=while true; do xdotool getactivewindow getwindowname; done
-# color=#EEB42F
+# color=#CB9DDA
 # interval=persist
+
+# COLORSCHEMES:
+# - GRUVBOX: #EEB42F | #91E78B
+# - SEPPUKU: #CB9DDA | #CCCCCC
 
 [bandwidth2]
 command=./bandwidth/bandwidth2
@@ -25,7 +29,8 @@ WARN_TX=30720
 CRIT_RX=512000
 CRIT_TX=51200
 REFRESH_TIME=3
-color=#EEB42F
+# color=#CB9DDA
+# color=#CB9DDA
 
 [separator]
 
@@ -40,7 +45,7 @@ markup=pango
 [pacman]
 command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
-color=#EEB42F
+color=#CB9DDA
 
 [separator]
 
@@ -50,33 +55,33 @@ command=echo "mic: $($SCRIPTS/mic-state)"
 # command=echo "mic: $($HOME/.local/bin/mic-toggle)"
 interval=once
 signal=10
-color=#91E78B
+color=#CCCCCC
 
 [separator]
 
 [memory]
 command=echo "$(free -m | awk '/Mem:/{printf "%d/%dM (%.2f%)", $3,$2,$3*100/$2}')"
 interval=5
-color=#EEB42F
+color=#CB9DDA
 
 [separator]
 
 [root_disk]
 command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#91E78B
+color=#CCCCCC
 
 [separator]
 
 [hdd_disk]
 command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#EEB42F
+color=#CB9DDA
 
 # [ip]
 # command=hostname -i | awk '{ print "IP:" $1 }'
 # interval=once
-# color=#91E78B
+# color=#CCCCCC
 
 [separator]
 
@@ -84,7 +89,7 @@ color=#EEB42F
 command=$SCRIPTS/toggle-sink
 interval=once
 signal=12
-color=#91E78B
+color=#CCCCCC
 
 [separator]
 
@@ -92,17 +97,16 @@ color=#91E78B
 # command=./volume.sh $button
 # interval=once
 # signal=13
-# color=#EEB42F
+# color=#CB9DDA
 
 # [sit_stand_timer]
 # command=echo $($SCRIPTS/sit-stand left seconds)
 # interval=10
-# color=#EEB42F
+# color=#CB9DDA
 
 [separator]
 
 [datetime]
 command=date '+%Y-%m-%d %H:%M:%S'
-# color=#91E78B
-color=#EEB42F
+color=#CB9DDA
 interval=5
