--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -79,40 +79,32 @@ key_bindings:
 # COLOURS / STYLING
 # CURSOR COLOURS ACT WEIRD AND DON'T MATCH THE DISPLAYED COLOUR
 colors:
-  # COLORSCHEME: gruvbox_dark.yaml
-  # Default colors
+  # COLORSCHEME: rose-pine.yaml
   primary:
     # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
-
-  # Normal colors
+    background: '0x191724'
+    foreground: '0xe0def4'
   cursor:
-    text: '#1d2021'
-    cursor: '#ebdbb2'
-
-  # Normal colors
+    text: '0xe0def4'
+    cursor: '0x524f67'
   normal:
-    black: '#282828'
-    red: '#cc241d'
-    green: '#98971a'
-    yellow: '#d79921'
-    blue: '#458588'
-    magenta: '#b16286'
-    cyan: '#689d6a'
-    white: '#a89984'
-
-  # Bright colors
+    black: '0x26233a'
+    red: '0xeb6f92'
+    green: '0x31748f'
+    yellow: '0xf6c177'
+    blue: '0x9ccfd8'
+    magenta: '0xc4a7e7'
+    cyan: '0xebbcba'
+    white: '0xe0def4'
   bright:
-    black: '#928374'
-    red: '#fb4934'
-    green: '#b8bb26'
-    yellow: '#fabd2f'
-    blue: '#83a598'
-    magenta: '#d3869b'
-    cyan: '#8ec07c'
-    white: '#ebdbb2'
+    black: '0x6e6a86'
+    red: '0xeb6f92'
+    green: '0x31748f'
+    yellow: '0xf6c177'
+    blue: '0x9ccfd8'
+    magenta: '0xc4a7e7'
+    cyan: '0xebbcba'
+    white: '0xe0def4'
   indexed_colors:
     - {index: 16, color: '0xF8BD96'}
     - {index: 17, color: '0xF5E0DC'}
@@ -125,3 +117,19 @@ colors:
     magenta: '#bb006b'
     cyan: '#433364'
     white: '#5f5f5f'
+  vi_mode_cursor:
+    text: '0xe0def4'
+    cursor: '0x524f67'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: '0xe0def4'
+    background: '0x403d52'
+  hints:
+    start:
+      foreground: '#908caa'
+      background: '#1f1d2e'
+    end:
+      foreground: '#6e6a86'
+      background: '#1f1d2e'
