--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -45,9 +45,14 @@ markup=pango
 [pacman]
 command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
-color=#CCCCCC
+color=#CB9DDA
 
 [separator]
+
+[battery]
+command=python battery.py
+interval=10
+color=#CCCCCC
 
 [mic]
 command=echo "mic: $($SCRIPTS/mic-state)"
