--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -39,13 +39,14 @@ command=./vpnf.sh
 interval=10
 signal=11
 markup=pango
+# color=#CB9DDA
 
 [separator]
 
 [pacman]
 command=checkupdates | wc -l | awk '{ print " " $1 }'
 interval=3600
-color=#CB9DDA
+color=#CCCCCC
 
 [separator]
 
@@ -53,33 +54,40 @@ color=#CB9DDA
 command=echo "mic: $($SCRIPTS/mic-state)"
 interval=once
 signal=10
-color=#CCCCCC
+color=#CB9DDA
 
 [separator]
 
 [memory]
 command=echo "$(free -m | awk '/Mem:/{printf "%d/%dM (%.2f%)", $3,$2,$3*100/$2}')"
 interval=5
-color=#CB9DDA
+color=#CCCCCC
 
 [separator]
 
 [root_disk]
 command=echo "$(df -hT | awk '/\/$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#CCCCCC
+color=#CB9DDA
 
 [separator]
 
 [hdd_disk]
 command=echo "$(df -hT | awk '/HDD$/{printf "%s:%s (%s)", $7, $5, $6}')"
 interval=3600
-color=#CB9DDA
+color=#CCCCCC
 
 # [ip]
 # command=hostname -i | awk '{ print "IP:" $1 }'
 # interval=once
 # color=#CCCCCC
+
+[separator]
+
+[rpi-status]
+command=./rpi-status.sh
+interval=60
+color=#CB9DDA
 
 [separator]
 
