[i3|emacs] mercury-browser+thunar-goto | light theme

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -107,9 +107,10 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+m exec --no-startup-id "rofi -m -4 -modi drun -show drun"
 bindsym $mod+space exec --no-startup-id "rofi -m -4 -show window"
 bindsym $mod+Shift+s exec "flameshot gui"
-bindsym $mod+b exec "firefox"
+bindsym $mod+b exec "mercury-browser"
 bindsym $mod+c exec "google-chrome-stable"
 bindsym $mod+a exec "$HOME/.local/bin/run"
+bindsym $mod+t exec "$HOME/.local/bin/thunar-goto"
 
 # Emacs
 bindsym $mod+e exec "$HOME/.local/bin/em n"
@@ -182,6 +183,7 @@ no_focus [window_role="pop_up"]
 for_window [window_role="browser"] layout tabbed
 
 for_window [class="Galculator"] floating enable
+for_window [class="Thunar"] floating enable
 for_window [class="genp"] floating enable
 for_window [class="pentablet"] floating enable
 for_window [class="Pavucontrol"] floating enable
