--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -50,8 +50,8 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-bindsym Next focus right
-bindsym Prior focus left
+# bindsym Next focus right
+# bindsym Prior focus left
 
 # move focused window; 100 px is only relevant for floating windows
 bindsym $mod+Ctrl+h move left 100 px
@@ -92,14 +92,17 @@ bindsym $mod+Ctrl+9 move container to workspace 9
 bindsym $mod+Ctrl+0 move container to workspace 10
 bindsym $mod+Ctrl+minus move container to workspace 11
 
+# Switch workspaces on outputs (left -> right & right -> left)
+bindsym $mod+Ctrl+grave mark current; focus output next; move workspace to output next; [con_mark="current"] focus; move workspace to output next; unmark
+
 # Workspace manipulation
 bindsym $mod+grave workspace back_and_forth
 bindsym $mod+comma focus output left
 bindsym $mod+period focus output right
 bindsym $mod+Ctrl+comma move workspace to output left
 bindsym $mod+Ctrl+period move workspace to output left
-bindsym $mod+Shift+comma workspace prev
-bindsym $mod+Shift+period workspace next
+bindsym $mod+Shift+comma workspace prev_on_output
+bindsym $mod+Shift+period workspace next_on_output
 
 # Layouts
 bindsym $mod+Escape layout toggle tabbed splitv splith
@@ -150,8 +153,8 @@ bindsym $mod+Ctrl+q exec "i3-nagbar -t warning -m 'You pressed the exit shortcut
 
 bindsym $mod+Ctrl+Shift+s exec "systemctl suspend"
 bindsym $mod+Ctrl+Shift+h exec "systemctl hibernate"
-bindsym $mod+Ctrl+Shift+r exec "$HOME/.local/bin/em p && reboot"
-bindsym $mod+Ctrl+Shift+u exec "$HOME/.local/bin/em p && shutdown now"
+bindsym $mod+Ctrl+Shift+r exec "$HOME/.local/bin/em p state && reboot"
+bindsym $mod+Ctrl+Shift+u exec "$HOME/.local/bin/em p state && shutdown now"
 
 # px for floating | ppt for tiled
 bindsym $mod+Shift+h resize shrink width 100 px or 10 ppt
@@ -182,7 +185,8 @@ bindsym $mod+equal scratchpad show
 
 no_focus [window_role="pop_up"]
 
-# for_window [class="google-chrome"] layout tabbed
+# for_window directives
+
 for_window [window_role="browser"] layout tabbed
 
 for_window [class="Thunar"] floating enable
