--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-live_config_reload = true
+general.live_config_reload = true
 # save_to_clipboard = true
 # "window.dynamic_title" = false
 
@@ -141,7 +141,7 @@ hide_when_typing = true
 history = 10000
 multiplier = 3
 
-[shell]
+[terminal.shell]
 args = ["--login"]
 program = "/usr/bin/fish"
 
